# Create-Map-IDW

./: Prakiraan.ipynb  README.md  __init__.py  config.py  execution_log.csv  map_creation.py  processors.py  pyproject.toml  static.py  template.py  utils.py
Main/: __init__.py  config.py  hth_processor.py  logger.py  map_creation.py  narasi.py  processors.py  static.py  status.py  template.py  unused.py  upload.py  utils.py  word.py
