[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-map-idw"
version = "1.0.0"
description = "Weather Map Generation Package for BMKG Papua Barat Daya"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "nashathur"}
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "geopandas>=0.12.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "rioxarray>=0.13.0",
    "xarray>=2022.6.0",
    "rasterio>=1.3.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.12.0",
    "numba>=0.56.0",
    "Pillow>=9.0.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Main*"]
