[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-map-idw"
version = "1.0.0"
description = "Weather Map Generation Package for BMKG Papua Barat Daya"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "nashathur"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "geopandas>=0.12.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "rioxarray>=0.13.0",
    "thefuzz>=0.22.0",
    "numba>=0.56.0",
    "Pillow>=9.0.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
narasi = [
    "google-generativeai>=0.8.0",
    "docxtpl>=0.16.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Main*"]
